Master
-----------------------------------------------

  * ADD: Make it possible to set the nvidia library name via env variable `MESOS_NVIDIA_LIB`
	* ADD: Timestamp into CGroupsV2 Metrics of the mesos-agent for docker containers.

Release Notes - Clusterd - Version 1.11.0-0.7.1
-----------------------------------------------

  * FIX: Mesos Data path was set uncorrectly during building under debian 11 and 12.

Release Notes - Clusterd - Version 1.11.0-0.7.0
-----------------------------------------------

  * ADD: Support for docker container metrics under cgroupsv2.

Release Notes - Clusterd - Version 1.11.0-0.6.1
-----------------------------------------------

  * FIX: Missing mesos-agent metrics when using cgroupsv2.


Release Notes - Clusterd - Version 1.11.0-0.6.0
-----------------------------------------------

  * Update zookeeper client to version 3.9.2.


Release Notes - Clusterd - Version 1.11.0-0.5.1
-----------------------------------------------

  * ADD: missing jquery and bootstrap files for webui (https://github.com/m3scluster/clusterd/issues/5)


Release Notes - Clusterd - Version 1.11.0-0.5.0
-----------------------------------------------
This release contains the following highlights:

  * ADD: Support for Docker Engine >= v26
  * ADD: CGroupsV2 support to the mesos containerizer.
  * MERGE: Merge with Apache Mesos Upstream.
    


Release Notes - Clusterd - Version 1.11.0-0.4.0
-----------------------------------------------
This release contains the following highlights:

  * Docker Containerizer now supports CGroupsV2. It will be enabled by the Agent 
    flag "--enable_cgroupv2". If its enabled, currently it will break the mesos containerizer.
  * Cleanup repository and remove more unneeded files. 
  * Update glog to version 0.6.0.
  * Update libevent to version 2.1.12.
  * Move mesos-mini to it's own repository (https://github.com/m3scluster/mesos-mini).
  * Remove mesos-tidy and mesos-website builder.